Project8/k8s/sensor-emulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-emulator
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-emulator
  template:
    metadata:
      labels:
        app: sensor-emulator
    spec:
      containers:
        - name: sensor-emulator
          image: <ECR-URL>/sensor-emulator:latest
