Project8/k8s/data-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
    spec:
      containers:
        - name: data-collector
          image: <ECR-URL>/data-collector:latest
          ports:
            - containerPort: 5000
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: data-collector
  namespace: iot
spec:
  selector:
    app: data-collector
  ports:
    - port: 5000
      name: api
    - port: 8000
      name: metrics
